# open-streetmap-mcp

./: pyproject.toml
examples/: client.py
src/osm_mcp_server/: server.py
