[project]
name = "osm-mcp-server"
version = "0.1.1"
description = "An OpenStreetMap MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "aiohttp>=3.11.13",
 "mcp[cli]>=1.3.0",
 "pillow>=10.0.0",
 "geojson>=3.1.0",
 "shapely>=2.0.0",
 "haversine>=2.8.0",
]
[[project.authors]]
name = "Jagan Shanmugam"
email = "jaganshanmugam@outlook.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
osm-mcp-server = "osm_mcp_server:main"
